<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05B691"
    tools:context=".MainActivity">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:text="@string/toDoList_new_task_label_text_view"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toDoList_title_label_text_view"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/toDoList_title_hint_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/toDoList_title_hint_edit_text"
                    android:inputType="text"
                    android:paddingStart="10sp"
                    android:textColor="#ffffff"
                    android:textColorHint="#f5f5f5"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toDoList_details_label_text_view"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/toDo_details"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/toDoList_details_hint_edit_text"
                    android:inputType="text"
                    android:paddingStart="10sp"
                    android:textColor="#ffffff"
                    android:textColorHint="#f5f5f5"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/toDo_creation_date"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="10sp"
                android:paddingTop="10sp"
                android:text="@string/toDoList_date_label_text_view"
                android:textColor="#ffffff"
                android:textColorHint="#f5f5f5"
                android:textSize="16sp" />

            <Button
                android:id="@+id/toDolist_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/orange_button_background"
                android:text="@string/toDoList_date_label_text_view" />

            <Button
                android:id="@+id/toDoList_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/orange_button_background"
                android:text="@string/toDoList_save_button" />

            <CheckBox
                android:id="@+id/toDo_completed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:button="@drawable/orange_button_background"
                android:text="@string/toDoList_completed_label"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>